reimagines the prefs menu part 1

--- a/testdoc2.html
+++ b/testdoc2.html
@@ -11,170 +11,161 @@
 			<div class='uiTitleWrapper'><div class='uiTitle'><tt>Tittle</tt></div></div>
 			<div class='uiContent'>
 				<center>
-				<a href='?_src_=prefs;preference=tab;tab=[SETTINGS_TAB]' class='linkOn'>Character Settings</a>
-				<a href='?_src_=prefs;preference=tab;tab=[APPEARANCE_TAB]' class='linkOn'>Character Appearance</a>
-				<a href='?_src_=prefs;preference=tab;tab=[ERP_TAB]' class='linkOn'>Underlying Appearance</a>
-				<a href='?_src_=prefs;preference=tab;tab=[LOADOUT_TAB]' class='linkOn'>Loadout</a>
-				<a href='?_src_=prefs;preference=tab;tab=[GAME_PREFERENCES_TAB]' class='linkOn'>Game Preferences</a>
-				<a href='?_src_=prefs;preference=tab;tab=[CONTENT_PREFERENCES_TAB]' class='linkOn'>Content Preferences</a>
-				<a href='?_src_=prefs;preference=tab;tab=[KEYBINDINGS_TAB]' class='linkOn'>Keybindings</a>
-			
+					<div class='FlexTable WellPadded'>
+						<a class='TabCellselected'>
+							Dan Kelly
+						</a>
+						<a>
+							Character[2]
+						</a>
+						<a>
+							Character[3]
+						</a>
+						<a>
+							Character[4]
+						</a>
+						<a>
+							Character[5]
+						</a>
+						<a>
+							COOL CHUNGUS THE COOLEST CHUNGUS WOW IM A LONG NAME
+						</a>
+						<a>
+							Character[7]
+						</a>
+						<a>
+							Character[8]
+						</a>
+					</div>
+				</center>
+				<div class='WideBarDark'>
+					<a href='?_src_=prefs;preference=copyslot;' class='BlockButton'>Copy</a>
+					<a href='?_src_=prefs;preference=paste;' class='BlockButton'>Paste</a>
+					Showing <a href='?_src_=prefs;preference=show_this_many;num=1;' class='BlockButton'>30</a> characters, <a href='?_src_=prefs;preference=names_per_row;num=1;' class='BlockButton'>6</a> per row
+					<a href='?_src_=prefs;preference=charlist_hidden' class='BlockButton'>Show Character List</a>
+				</div>
+				<br>
 				<center>
-				<a style='white-space:nowrap;' href='?_src_=prefs;preference=changeslot;num=[i];'class='linkOn'>[name]</a>
-				<hr><br>
-
-				<a 
-					href='
-						?_src_=prefs;
-						preference=erp_tab;
-						newtab=[ERP_TAB_REARRANGE]' 
-						class='linkOn'>
-							Layering
-				</a><br>
-				<a 
-					href='
-						?_src_=prefs;
-						preference=erp_tab;
-						newtab=[ERP_TAB_HOME]' 
-						class='linkOn'>
-							Butt
-				</a>
-				<a 
-					href='
-						?_src_=prefs;
-						preference=erp_tab;
-						newtab=[ERP_TAB_REARRANGE]' 
-						class='linkOn'>
-							Peen
-				</a>
-				<a 
-					href='
-						?_src_=prefs;
-						preference=erp_tab;
-						newtab=[ERP_TAB_REARRANGE]' 
-						class='linkOn'>
-							belly
-				</a>
-
+					<table class='TabHeader'>
+						<tr>
+							<td class='TabCellselected'>
+								<a href='?_src_=prefs;preference=tab;tab=PPT_CHARCTER_PROPERTIES'>Properties</a>
+							</td>
+							<td>
+								<a href='?_src_=prefs;preference=tab;tab=PPT_CHARCTER_APPEARANCE'>Appearance</a>
+							</td>
+							<td>
+								<a href='?_src_=prefs;preference=tab;tab=PPT_LOADOUT'>Loadout</a>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<a href='?_src_=prefs;preference=tab;tab=PPT_GAME_PREFERENCES'>Game Settings</a>
+							</td>
+							<td>
+								<a href='?_src_=prefs;preference=tab;tab=PPT_ADULT_PREFERENCES'>Adult Settings</a>
+							</td>
+							<td>
+								<a href='?_src_=prefs;preference=tab;tab=PPT_KEYBINDINGS'>Keybindings</a>
+							</td>
+						</tr>
+					</table>
 				</center>
 				<br>
-
-				<style>
-					table.table_genital_list {
-						border: 1px solid green;
-						width: 75%;
-						margin: auto;
-						padding: 0px;
-					}
-					td.genital_name { 
-						background-color: rgba(0, 128, 0, 0.4);
-						border: 1px solid rgba(0, 128, 0, 0.3);
-						font-weight: bold;
-						text-align: center;
-						margin: auto;
-						width: auto;
-					} 
-					td.genital_arrow_on { 
-						background-color: rgba(0, 128, 0, 0.8);
-						outline-style: inset;
-						outline-width: 1px;
-						outline-color: green;
-						text-align: center;
-						width: auto;
-					} 
-					td.genital_arrow_off { 
-						color : rgba(0, 128, 0, 0);
-						background-color: rgba(0, 128, 0, 0.4);
-						outline-width: 1px;
-						outline-color: green;
-						text-align: center;
-						width: auto;
-					} 
-					td.coverage_on { 
-						background-color: rgba(0, 128, 0, 0.8);
-						outline-style: inset;
-						outline-width: 1px;
-						outline-color: green;
-						text-align: center;
-						width: auto;
-					} 
-					td.coverage_off { 
-						color : rgba(0, 128, 0, 0);
-						background-color: rgba(0, 128, 0, 0.4);
-						outline-style: inset;
-						outline-width: 1px;
-						outline-color: green;
-						text-align: center;
-						width: auto;
-					} 
-					a.clicky_no_border {
-						display:inline-table;
-						text-align: center;
-						width: 90%;
-					}
-
-				</style>
-	<table class='table_genital_list'>
-		<tr class='talign'>
-		<td class='talign'>
-		<div class='gen_name'>[thing_name]</div>
-		</td></tr>
-	
-		<tr class='talign'><td class='talign'>
-		<div class='gen_container'>
-		<div class='gen_setting_name'>Has [one_or_some]:</div>
-		<a 
-					class='clicky' 
-					href='
-						?_src_=prefs;
-						preference=[erp_tab_page]'>
-							YES
-				</a>
-			<div class='gen_setting_name'>Color:</div>
-				<div class='gen_setting_name'>Locked to skintone!</div>
-				<a 
-							class='clicky'
-							style='
-								background-color:green' 
-							href='
-								?_src_=prefs;
-								preference=[feature_key]_color;
-								task=input'>
-									Green
-						</a>
-			<div class='gen_setting_name'>Shape:</div>
-			<a 
-						class='clicky' 
-						href='
-							?_src_=prefs;
-							preference=[feature_key]_shape;
-							task=input'>
-								yes (taur)
-					</a>
-			<div class='gen_setting_name'>Size:</div>
-			<a 
-						class='clicky' 
-						href='
-							?_src_=prefs;
-							preference=[feature_key]_size;
-							task=input'>
-								400 inches
-					</a>
+				<center>
+					<table class='TabHeader'>
+						<tr>
+							<td class='TabCellselected'>
+								<a href='?_src_=prefs;preference=subtab;subtab=PPT_CHARCTER_PROPERTIES_INFO;'>Background</a>
+							</td>
+							<td>
+								<a href='?_src_=prefs;preference=subtab;subtab=PPT_CHARCTER_PROPERTIES_VOICE;'>Voice</a>
+							</td>
+							<td>
+								<a href='?_src_=prefs;preference=subtab;subtab=PPT_CHARCTER_PROPERTIES_MISC;'>Miscellaneous</a>
+							</td>
+						</tr>
+					</table>
+				</center>
+				<br>
+				<!-- vertically split element! -->
+				<div class='BGsplitContainer'>
+					<div class='BGsplit'>
+						<div class='SettingArray'>
+							<div class='SettingFlex' style='flex-basis: 100%;'>
+								<a>
+									<img src='https://via.placeholder.com/150' style='margin: auto;'>
+								</a>
+							</div>
+							<div class='SettingFlex' style='flex-basis: 100%;'>
+								<div class='SettingName'>
+									Name:
+								</div>
+								<a href='?_src_=prefs;preference=charage;'>
+									Dip Kelly
+								</a>
+							</div>
+							<div class='SettingFlex'>
+								<div class='SettingName'>
+									Age:
+								</div>
+								<a href='?_src_=prefs;preference=charage;'>
+									2555
+								</a>
+							</div>
+							<div class='SettingFlex'>
+								<div class='SettingName'>
+									Gender
+								</div>
+								<a href='?_src_=prefs;preference=charage;'>
+									Dip Kelly
+								</a>
+							</div>
+							<div class='SettingFlex' style='flex-basis: 100%;'>
+								<div class='SettingName'>
+									I am a...
+								</div>
+								<a href='?_src_=prefs;preference=charage;'>
+									Bottom~
+								</a>
+							</div>
+							<div class='SettingFlex' style='flex-basis: 100%;'>
+								<div class='SettingName'>
+									I like to kiss...
+								</div>
+								<a href='?_src_=prefs;preference=charage;'>
+									girls~ and boys~ BUT MOSTLY GIRLS
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class='BGsplit'>
+						<div class='SettingArrayCol'>
+							<div class='SettingFlexCol'>
+								<div class='SettingNameCol'>Flavor Text:</div>
+								<a href='?_src_=prefs;preference=charname;'>Unfortunately some people are still using IE8, 9 & 10 and some developers need to support it, so I was just noting that your solution can support more browsers. Newer browsers support : for pseudoelements so using that means it is backwards compatible.</a>
+							</div>
+							<div class='SettingFlexCol'>
+								<div class='SettingNameCol'>OOC:</div>
+								<a href='?_src_=prefs;preference=charage;'>nothin</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			<br>
+			<a class='WideBar'>Visual Chat Options</a>
+			<a class='WideBar'>SAVE</a>
+			<table class='TabHeader'>
+				<tr>
+					<td width='50%'>
+						<a href='?_src_=prefs;preference=tab;tab=PPT_CHAT_VISUAL'>Undo</a>
+					</td>
+					<td width='50%'>
+						<a href='?_src_=prefs;preference=tab;tab=PPT_CHAT_VISUAL'>DELETE</a>
+					</td>
+				</tr>
+			</table>
 		</div>
-		</td>
-		</tr>
-		<hr><center>
-
-				<a href='?_src_=prefs;preference=load'>Undo</a>
-				<a href='?_src_=prefs;preference=save'>Save Setup</a>
-		
-			<a href='?_src_=prefs;preference=reset_all'>Reset Setup</a>
-			</center>
-	
-			<div class="wrapper"></div>
-			<div class="scanline"></div>
-			<div class="overlay"></div>
-			</div>
 		</div>
 	</body>
 </html>
