--- a/testdoc3.html
+++ b/testdoc3.html
@@ -48,3 +48,59 @@
 		</div>
 	</body>
 </html>
+
+
+
+
+table.table_genital_list {
+	border: 1px solid green;
+	width: 75%;
+	margin: auto;
+	padding: 0px;
+}
+td.genital_name { 
+	background-color: rgba(0, 128, 0, 0.4);
+	border: 1px solid rgba(0, 128, 0, 0.3);
+	font-weight: bold;
+	text-align: center;
+	margin: auto;
+	width: auto;
+} 
+td.genital_arrow_on { 
+	background-color: rgba(0, 128, 0, 0.8);
+	outline-style: inset;
+	outline-width: 1px;
+	outline-color: green;
+	text-align: center;
+	width: auto;
+} 
+td.genital_arrow_off { 
+	color : rgba(0, 128, 0, 0);
+	background-color: rgba(0, 128, 0, 0.4);
+	outline-width: 1px;
+	outline-color: green;
+	text-align: center;
+	width: auto;
+} 
+td.coverage_on { 
+	background-color: rgba(0, 128, 0, 0.8);
+	outline-style: inset;
+	outline-width: 1px;
+	outline-color: green;
+	text-align: center;
+	width: auto;
+} 
+td.coverage_off { 
+	color : rgba(0, 128, 0, 0);
+	background-color: rgba(0, 128, 0, 0.4);
+	outline-style: inset;
+	outline-width: 1px;
+	outline-color: green;
+	text-align: center;
+	width: auto;
+} 
+a.clicky_no_border {
+	display:inline-table;
+	text-align: center;
+	width: 90%;
+}
